[add]pointモデルをdynamodbのテーブル上に生成する処理の追加
